refactoring pt3